# oryol

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  .vimrc  AUTHORS  BUILD.md  BlendTest-debug.apk  BlendTest.html  BlendTest.html.mem  BlendTest.js  BlendTest.pexe  BlendTest_pnacl.html  CMakeLists.txt  Clear-debug.apk  Clear.html  Clear.html.mem  Clear.js  Clear.pexe  Clear_pnacl.html  CoreHello.html  CoreHello.html.mem  CoreHello.js  DDSCubeMap.html  DDSCubeMap.html.mem  DDSCubeMap.js  DDSCubeMap.pexe  DDSCubeMap_pnacl.html  DDSTextureLoading-debug.apk  DDSTextureLoading.html  DDSTextureLoading.html.mem  DDSTextureLoading.js  DDSTextureLoading.nmf  DDSTextureLoading.pexe  DDSTextureLoading_pnacl.html  DESIGN-MANIFESTO.md  DebugText-debug.apk  DebugText.html  DebugText.html.mem  DebugText.js  (+204 more)
code/Modules/Gfx/: CMakeLists.txt  Gfx.cc  Gfx.h  GfxConfig.h  GfxProtocol.cc  GfxProtocol.h  GfxProtocol.py  GfxProtocol.xml  GfxProtocol.yml  GfxTypes.cc  GfxTypes.h  MeshLoaderBase.cc  MeshLoaderBase.h  README.md  TextureLoaderBase.h
code/Modules/Gfx/Attrs/: DisplayAttrs.h  ImageDataAttrs.h  IndexBufferAttrs.h  TextureAttrs.h  VertexBufferAttrs.h
code/Modules/Gfx/Core/: BlendState.h  ClearState.cc  ClearState.h  DepthStencilState.h  DrawState.h  Enums.h  GfxConfig.h  GfxEvent.h  GfxFrameInfo.h  GfxId.cc  GfxId.h  GfxTypes.cc  GfxTypes.h  MeshBlock.h  PassState.h  PrimitiveGroup.h  RasterizerState.h  SamplerState.h  StencilState.h  TextureBlockLayout.cc  TextureBlockLayout.h  Types.cc  Types.h  UniformBlockLayout.cc  UniformBlockLayout.h  UniformLayout.cc  UniformLayout.h  VertexComponent.h  VertexLayout.cc  VertexLayout.h  displayMgr.h  displayMgrBase.cc  displayMgrBase.h  drawState.cc  drawState.h  drawStateFactory.cc  drawStateFactory.h  drawStatePool.h  gfxPointers.h  meshFactory.h  (+13 more)
code/Modules/Gfx/Public/: GfxTypes.h  MeshLoaderBase.h  TextureLoaderBase.h
code/Modules/Gfx/Resource/: GfxResourceContainer.cc  GfxResourceContainer.h  MeshLoaderBase.cc  MeshLoaderBase.h  TextureLoaderBase.cc  TextureLoaderBase.h  drawState.cc  drawState.h  drawStateBase.cc  drawStateBase.h  drawStateFactory.cc  drawStateFactory.h  drawStateFactoryBase.cc  drawStateFactoryBase.h  drawStatePool.h  factory.h  gfxFactory.h  gfxFactoryBase.cc  gfxFactoryBase.h  gfxResourceContainer.cc  gfxResourceContainer.h  gfxResourceContainerBase.cc  gfxResourceContainerBase.h  loaderBase.h  mesh.h  meshBase.cc  meshBase.h  meshFactory.h  meshPool.h  pipeline.h  pipelineBase.cc  pipelineBase.h  pipelineFactory.h  pipelineFactoryBase.cc  pipelineFactoryBase.h  programBundle.h  programBundleFactory.h  programBundlePool.h  renderPassFactoryBase.cc  renderPassFactoryBase.h  (+22 more)
code/Modules/Gfx/Setup/: DrawStateSetup.cc  DrawStateSetup.h  GfxSetup.cc  GfxSetup.h  MeshSetup.cc  MeshSetup.h  PipelineSetup.cc  PipelineSetup.h  ProgramBundleSetup.cc  ProgramBundleSetup.h  RenderPassSetup.cc  RenderPassSetup.h  ShaderSetup.cc  ShaderSetup.h  TextureBlockSetup.cc  TextureBlockSetup.h  TextureBundleSetup.cc  TextureBundleSetup.h  TextureSetup.cc  TextureSetup.h
code/Modules/Gfx/UnitTests/: DDSLoadTest.cc  MeshBuilderTest.cc  MeshFactoryTest.cc  MeshSetupTest.cc  RenderEnumsTest.cc  RenderSetupTest.cc  ShapeBuilderTest.cc  TestShaderLibrary.cc  TestShaderLibrary.glsl  TestShaderLibrary.h  TestShaderLibrary.py  TestShaderLibrary.shd  TestShaderLibrary.xml  TextureFactoryTest.cc  TextureSetupTest.cc  VertexLayoutTest.cc  VertexWriterTest.cc  glTypesTest.cc
code/Modules/Gfx/Util/: MeshBuilder.cc  MeshBuilder.h  RawMeshLoader.cc  RawMeshLoader.h  ShapeBuilder.cc  ShapeBuilder.h  TextureLoader.cc  TextureLoader.h  VertexWriter.cc
code/Modules/Gfx/base/: loaderBase.h  meshBase.cc  meshBase.h  meshLoaderBase.cc  meshLoaderBase.h  programBundleBase.h  renderLoaderFactory.h  renderMgrBase.cc  renderMgrBase.h  renderSimpleFactory.h  shaderBase.cc  shaderBase.h  textureBase.cc  textureBase.h  textureLoaderBase.h
code/Modules/Gfx/d3d11/: d3d11DisplayMgr.cc  d3d11DisplayMgr.h  d3d11DrawState.cc  d3d11DrawState.h  d3d11DrawStateFactory.cc  d3d11DrawStateFactory.h  d3d11Enums.h  d3d11InputDefs.h  d3d11Mesh.cc  d3d11Mesh.h  d3d11MeshFactory.cc  d3d11MeshFactory.h  d3d11Pipeline.cc  d3d11Pipeline.h  d3d11PipelineFactory.cc  d3d11PipelineFactory.h  d3d11ProgramBundle.cc  d3d11ProgramBundle.h  d3d11ProgramBundleFactory.cc  d3d11ProgramBundleFactory.h  d3d11RenderPassFactory.cc  d3d11RenderPassFactory.h  d3d11Renderer.cc  d3d11Renderer.h  d3d11Resource.cc  d3d11Resource.h  d3d11Shader.cc  d3d11Shader.h  d3d11ShaderFactory.cc  d3d11ShaderFactory.h  d3d11Texture.cc  d3d11Texture.h  d3d11TextureBlock.cc  d3d11TextureBlock.h  d3d11TextureBlockFactory.cc  d3d11TextureBlockFactory.h  d3d11TextureBundle.cc  d3d11TextureBundle.h  d3d11TextureBundleFactory.cc  d3d11TextureBundleFactory.h  (+6 more)
code/Modules/Gfx/d3d12/: d3d12Allocator.h  d3d12Config.h  d3d12DescAllocator.cc  d3d12DescAllocator.h  d3d12DisplayMgr.cc  d3d12DisplayMgr.h  d3d12DrawState.cc  d3d12DrawState.h  d3d12DrawStateFactory.cc  d3d12DrawStateFactory.h  d3d12Mesh.cc  d3d12Mesh.h  d3d12MeshFactory.cc  d3d12MeshFactory.h  d3d12Pipeline.cc  d3d12Pipeline.h  d3d12PipelineFactory.cc  d3d12PipelineFactory.h  d3d12RenderPassFactory.cc  d3d12RenderPassFactory.h  d3d12Renderer.cc  d3d12Renderer.h  d3d12ResAllocator.cc  d3d12ResAllocator.h  d3d12Resource.cc  d3d12Resource.h  d3d12ResourceAllocator.cc  d3d12ResourceAllocator.h  d3d12ResourceContainer.cc  d3d12Shader.h  (+19 more)
code/Modules/Render/: CMakeLists.txt  DisplayAttrs.cc  DisplayAttrs.h  DisplaySetup.cc  DisplaySetup.h  IndexBufferAttrs.cc  IndexBufferAttrs.h  IndexType.cc  IndexType.h  Mesh.h  MeshSetup.cc  MeshSetup.h  Module.cc  Module.h  PixelFormat.cc  PixelFormat.h  PrimitiveGroup.cc  PrimitiveGroup.h  PrimitiveType.h  README.md  Render.cc  Render.h  RenderFacade.cc  RenderFacade.h  RenderProtocol.cc  RenderProtocol.h  RenderProtocol.xml  State.cc  State.h  TextureAttrs.cc  TextureAttrs.h  TextureFilterMode.cc  TextureFilterMode.h  TextureType.cc  TextureType.h  TextureWrapMode.cc  TextureWrapMode.h  Usage.cc  Usage.h  VertexBufferAttrs.h  (+6 more)
(+2602 files in other folders)
